--- a/style.css
+++ b/style.css
@@ -1,17 +1,83 @@
-button {
-	margin-left: 20px;
-	margin-bottom: 20px;
-	background-color: yellow;
-	font-style: oblique;
-	font-weight: 600;
-	height: 24px;
-	width: 60px;
+* {
+	margin: 0;
+	padding: 0;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	box-sizing: border-box;
 }
 
-ul li:first-child .btnup {
+body {
+	background-image: linear-gradient(45deg, #6ca2d1, #c424a1);
+	min-height: 100vh;
+}
+
+.container {
+	max-width: 800px;
+	margin: auto;
+	padding: 10px;
+}
+
+.txtb {
+	color: yellow;
+	width: 100%;
+	border: none;
+	border-bottom: 2px solid #000;
+	background: none;
+	padding: 10px;
+	outline: none;
+	font-size: 18px;
+}
+
+h3 {
+	margin: 10px 10px 10px;
+	padding-left: 5px;
+	font-size: 30px;
+	/* border-style: solid; */
+	background-color: linear-gradient(45deg, #d9eb74, #ffe70f);
+}
+
+::placeholder {
+	/* Chrome, Firefox, Opera, Safari 10.1+ */
+	color: rgba(255, 255, 0, 0.432);
+	font-weight: 600;
+}
+
+.task {
+	font: "Lucida Console", Monaco, monospace;
+	width: 100%;
+	background: rgba(255, 255, 255, 0.5);
+	padding: 18px;
+	margin: 6px 0;
+	overflow: hidden;
+	font-weight: bold;
+}
+
+.task i {
+	float: right;
+	margin-left: 20px;
+	cursor: pointer;
+}
+
+.comp .task {
+	background: rgba(0, 0, 0, .5);
+	color: #fff;
+}
+
+.notcomp :first-child .fa-angle-double-up {
 	visibility: hidden;
 }
 
-ul li:last-child .btndwn {
+.comp :first-child .fa-angle-double-up {
+	visibility: hidden;
+}
+
+.notcomp :last-child .fa-angle-double-down {
+	visibility: hidden;
+}
+
+.comp :last-child .fa-angle-double-down {
+	visibility: hidden;
+}
+
+.comp .fa-check {
 	visibility: hidden;
 }
